# prismar

./: Cargo.toml  README.md
.github/workflows/: clippy.yml  e2e.yml  tests.yml
crates/prismar/: Cargo.toml  README.md
crates/prismar/src/: json_query.rs  lib.rs  runtime.rs  sql.rs
crates/prismar/tests/: derive_macro.rs  filter_sql.rs  id_and_raw.rs  operation_args.rs  prisma_json.rs  runtime_sqlite.rs  sql_injection_guard.rs
crates/prismar_derive/: Cargo.toml
crates/prismar_derive/src/: lib.rs
crates/prismar_migrate/: Cargo.toml
crates/prismar_migrate/src/: lib.rs
crates/prismar_schema/: Cargo.toml
crates/prismar_schema/src/: lib.rs
crates/prismar_schema/tests/: parse.rs
end2end/: README.md  run.sh
end2end/cargo_namespace/: Cargo.toml  dev.db  query.json  schema.prisma
end2end/cargo_namespace/migrations/20260309144216_init/: migration.sql
end2end/cargo_namespace/src/: main.rs
tests/: README.md  docker-compose.databases.yml
