[workspace]
resolver = "2"
members = [
	"crates/prismar",
	"crates/prismar_derive",
	"crates/prismar_schema",
	"crates/prismar_migrate",
	"bin/prismar-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["next-hat contributors <team@next-hat.com>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "2"
