[package]
name = "prismar_derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Derive macros for prismar"
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
